remove margin on results div to fix layout issue

--- a/views/shared/css/results.css
+++ b/views/shared/css/results.css
@@ -475,7 +475,7 @@ ul {
 
 /* line 54, sass/results.scss */
 #solr-results {
-  margin-left: 22%;
+  /*margin-left: 22%;*/
 }
 /* line 57, sass/results.scss */
 #solr-results div.result {
